fix layout bug caused by mobile browsers' url bars using dvh

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
 }
 
 main {
-  height: calc(100vh - 110px)
+  height: calc(100dvh - 110px)
 }
 
 /* Hide the vertical scrollbar */
